# KioskForge

./: .gitignore  CHANGES.md  FAQ.md  Frequently Asked Questions (FAQ).md  GUIDE.md  KioskConfig.py  KioskDesktop.py  KioskDiscoveryClient.py  KioskDiscoveryServer.py  KioskForge.py  KioskForge.spec  KioskOpenbox.py  KioskReport.py  KioskSetup.py  KioskStart.py  KioskStartX11.py  KioskUpdate.py  KioskUpgrade.py  KioskZipper.py  LICENSE  LICENSE.md  README.md  TODO.md  TOOLS.md  build.bat  build.py  check.py  kiosk-booter.py  kioskforge-gui.py  pylintrc.toml  pyproject.toml  requirements.txt  ship.bat  test.bat  test.sh
assets/: KioskForge.iss  makeweb.py  pandoc-styles.html
docs/: Changes.md  Contributing.md  FAQ.md  Guide.md  Manual.md
kiosk/: KioskClass.py  __init__.py  actions.py  builder.py  convert.py  driver.py  errors.py  internet.py  invoke.py  logger.py  script.py  setup.py  version.py
kiosklib/: __init__.py  actions.py  builder.py  convert.py  detect.py  discovery.py  driver.py  errors.py  fstab.py  invoke.py  kiosk.py  locales.py  logger.py  network.py  script.py  setup.py  shell.py  signal.py  sources.py  timezones.py  various.py  version.py  wpctl.py
toolbox/: __init__.py  actions.py  builder.py  convert.py  discovery.py  driver.py  errors.py  fstab.py  internet.py  invoke.py  kiosk.py  locales.py  logger.py  network.py  script.py  setup.py  shell.py  signal.py  sources.py  timezones.py  various.py  version.py
