[project]
name = "KioskForge"
version = "0.25.0"
description = "KioskForge generates Raspberry Pi kiosks on top of Ubuntu Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==5.0.0",
    "mypy==1.18.2",
    "pefile==2023.2.7",
    "pyinstaller==6.16.0",
    "pyinstaller-versionfile==3.0.1",
    "pylint==4.0.3",
    "pyrefly==0.42.1",
]
